# market_research

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
config/: constraint_taxonomy.yml  llm.yml  seed_entities.yml  seed_sources.yml
migrations/: 001_initial_schema.sql  002_themes_alerts.sql
radars/: ai_constraints_spec.md
scripts/: backfill.py  backfill_entities.py  run_pipeline.py  seed_db.py
src/: db.py  llm.py  models.py  settings.py
src/alerts/: digest.py  telegram.py  triage.py
src/api/: app.py
src/api/routes/: events.py  heatmap.py  sources.py  themes.py
src/collector/: dedup.py  js_renderer.py  pdf_monitor.py  query_generator.py  rss.py  scheduler.py  scraper.py  web_search.py
src/extractor/: event_extractor.py
src/linker/: entity_discovery.py  entity_linker.py
src/normalizer/: lang_detect.py  translator.py
src/themes/: clusterer.py  scorer.py  thesis_writer.py
